<?xml version="1.0" encoding="utf-8"?>
<resources>
    <color name="opaque_red">#f00</color>
    <string name="hello">Hello!</string>
    <string name="app_name">MyApps</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="year_prompt">Choose a year</string>
        <string-array name="year_arrays">
            <item>2009</item>
            <item>2010</item>
            <item>2011</item>
            <item>2012</item>
            <item>2013</item>
            <item>2014</item>
            <item>2015</item>
            <item>2016</item>
        </string-array>

    <string name="month_prompt">Choose a month</string>
    <string-array name="month_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="day_prompt">Choose a day</string>
    <string-array name="day_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string name="occupation_prompt">Choose a occupation</string>
    <string-array name="occuption_arrays">
        <item>SelfEmployed</item>
        <item>Student</item>
        <item>Businessman</item>
        <item>Salried Pvt Sector</item>
        <item>Salried Government Sector</item>
        <item>Others</item>
    </string-array>

    <string name="family_prompt">Choose family size</string>
    <string-array name="family_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="marital_prompt">marital status</string>
    <string-array name="marital_arrays">
        <item>Divorced</item>
        <item>Married</item>
        <item>Unmarried</item>
    </string-array>

    <string name="Mileage_prompt">Mileage</string>
    <string-array name="Mileage_arrays">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
    </string-array>




</resources>
