<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="City where the car is registered (RTO)"
        android:id="@+id/CarRegistered"
        android:textSize="18dp"
        android:textColor="#3f5165"/>

    <EditText android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:textSize="15dp"
        android:textColor="#3f5165"
        android:background="#b0e0e6"
        android:inputType="text"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First Purchase or Registration Date"
        android:id="@+id/RegDate"
        android:textSize="15dp"
        android:textColor="#3f5165"/>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="wrap_content"
        android:layout_height="50dp" android:textSize="15dp"
        android:layout_marginTop="15dp">


        <Spinner
            android:id="@+id/spinnerRegDay"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            android:layout_gravity="right"
            android:entries="@array/day_arrays"
            android:prompt="@string/day_prompt"
            android:textColor="#3f5165"
            android:background="#b0e0e6"/>

        <Spinner
            android:id="@+id/spinnerRegMonth"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="25.0"
            android:spinnerMode="dropdown"
            android:entries="@array/month_arrays"
            android:prompt="@string/month_prompt"
            android:textColor="#3f5165"
            android:background="#b0e0e6"/>

        <Spinner
            android:id="@+id/spinnerRegYear"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            android:layout_weight="25.0"
            android:entries="@array/year_arrays"
            android:prompt="@string/year_prompt"
            android:textColor="#3f5165"
            android:background="#b0e0e6"/>
    </LinearLayout>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Registration Type"
        android:textSize="18dp"
        android:id="@+id/RegTyp"
        android:layout_marginBottom="10dp"
        android:textColor="#3f5165"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#b0e0e6"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/Individual"
            android:layout_height="wrap_content"
            android:text="Individual"
            android:textSize="15dp"
            android:textColor="#3f5165"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Company"
            android:textSize="15dp"
            android:text="Company"
            android:textColor="#3f5165"/>


    </RadioGroup>



</LinearLayout>